--- a/Notebooks/Forest_Fire_prediction.ipynb
+++ b/Notebooks/Forest_Fire_prediction.ipynb
@@ -273,7 +273,7 @@
     }
    ],
    "source": [
-    "df=pd.read_csv('./forestfires.csv')\n",
+    "df=pd.read_csv('forestfires.csv')\n",
     "df"
    ]
   },
@@ -1425,7 +1425,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.1 64-bit",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1439,12 +1439,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1 (tags/v3.9.1:1e5d33e, Dec  7 2020, 17:08:21) [MSC v.1927 64 bit (AMD64)]"
+   "version": "3.10.4 (tags/v3.10.4:9d38120, Mar 23 2022, 23:13:41) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "bd69946cc63188ca20206ee390e7121027bd10c780d69ca0a3176903a9b14741"
+    "hash": "ea928f5d67c4c93314bde902f9925b00b35f33a7a7fd46f2f8b2a0108e4de065"
    }
   }
  },
